<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/cardview_shadow_start_color"
    android:padding="5dp"
    tools:context=".EditingActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/editToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="left"
        tools:ignore="RtlHardcoded">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="60dp"
            android:layout_height="57dp"
            app:srcCompat="@drawable/ic_edit_24" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/edittheker"
            android:textSize="24sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <EditText
            android:id="@+id/EditDekerEdit"
            style="@style/Editingbox"
            android:ems="10"
            android:inputType="textPersonName"
            tools:ignore="SpeakableTextPresentCheck"
            android:autofillHints="" />

        <ImageButton
            android:id="@+id/EditNextBut"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/cardview_shadow_end_color"
            android:contentDescription="@string/next"
            app:srcCompat="@mipmap/ic_arrow"
            tools:ignore="OnClick,ImageContrastCheck" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <EditText
            android:id="@+id/EditCountEdit"
            style="@style/Editingbox"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/EditDeleteBut"
            android:layout_width="75dp"
            android:layout_height="49dp"
            android:background="@color/cardview_shadow_end_color"
            android:contentDescription="@string/clicktodelet"
            app:srcCompat="@android:drawable/ic_menu_delete"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/EditCancelBUT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/EditAddBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/add" />

        <Button
            android:id="@+id/EditEditBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/edit" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <Button
            android:id="@+id/EditOkBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@android:string/ok"
            android:textColor="@android:color/holo_red_dark" />
    </TableRow>

</LinearLayout>